--- a/MusicControllerWeb/appsettings.Development.json
+++ b/MusicControllerWeb/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MusicControleer;Trusted_Connection=True;MultipleActiveResultSets=true"
-    },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ISBLT-6586\\SQLEXPRESS;Database=MusicControllerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
