APi token refresh , add devices an Remove Href for UserName and other UI issue

--- a/MusicController.Identity/MusicController.Identity.csproj
+++ b/MusicController.Identity/MusicController.Identity.csproj
@@ -18,4 +18,7 @@
 		</PackageReference>
 		<PackageReference Include="System.Security.Permissions" Version="4.7.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <ProjectReference Include="..\MusicController.Common\MusicController.Common.csproj" />
+	</ItemGroup>
 </Project>
