Track time and date picker is done and Playlist Schedule is done

--- a/MusicControllerWeb/appsettings.Development.json
+++ b/MusicControllerWeb/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ISBLT-6586\\SQLEXPRESS;Database=MusicControllerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=ISBLT-6586\\SQLEXPRESS;;Database=MusicControllerDB; Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
