Seletion list for Tracks

--- a/MusicControllerWeb/appsettings.Development.json
+++ b/MusicControllerWeb/appsettings.Development.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=172.20.0.96;Database=MusicController;User ID=RemoteUser;Password=Rrr@1231;"
   },
   "MySettings": {
-    "FileRepositoryPath": "C:\\IIS Web Apps\\SurveyAPI_Flutter\\Playlists",
+    "FileRepositoryPath": "\\\\172.20.0.95\\IIS Web Apps\\SurveyAPI_Flutter\\Playlists",
     "ProdServerURL": "http://78.100.122.178:6040/playlists/"
   },
   "Logging": {
