--- a/MusicControllerWeb/web.config
+++ b/MusicControllerWeb/web.config
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.\SQLInstance;Initial Catalog=App;Integrated Security=True" providerName="System.Data.SqlClient"/>
-  </connectionStrings>
+	<connectionStrings>
 
-  <!-- To customize the asp.net core module uncomment and edit the following section. 
+		<add name="DefaultConnection" connectionString="Data Source=172.20.0.96;Initial Catalog=MusicController;Data Source=localhost;Initial Catalog=MyDatabase;User Id=RemoteUser;Password=Rrr@1231;" providerName="System.Data.SqlClient"/>
+
+	</connectionStrings>
+	<!-- To customize the asp.net core module uncomment and edit the following section. 
   For more info see https://go.microsoft.com/fwlink/?linkid=838655 -->
-  <!--
+	<!--
   <system.webServer>
     <handlers>
       <remove name="aspNetCore"/>
@@ -16,13 +16,16 @@
     <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" />
   </system.webServer>
   -->
-	
-<system.webServer>
-  <security>
-    <requestFiltering>
-      <requestLimits maxAllowedContentLength="1073741824" />
-    </requestFiltering>
-  </security>
-</system.webServer>
-
+	<system.webServer>
+		<security>
+			<requestFiltering>
+				<requestLimits maxAllowedContentLength="1073741824" />
+			</requestFiltering>
+		</security>
+		<handlers>
+			<add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+		</handlers>
+		<aspNetCore processPath=".\MusicControllerWeb.exe" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="inprocess" />
+	</system.webServer>
 </configuration>
+<!--ProjectGuid: 8c43eb99-87cd-4842-8260-51e192700423-->
