Token to secret

--- a/MusicController.API/appsettings.json
+++ b/MusicController.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=172.20.0.96;Database=MusicController;User ID=RemoteUser;Password=Rrr@1231;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
