--- a/MusicController.API/appsettings.Development.json
+++ b/MusicController.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ISBLT-6586\\SQLEXPRESS;Database=MusicControllerDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=172.20.0.96;Database=MusicController;User ID=RemoteUser;Password=Rrr@1231;"
   },
   "Logging": {
     "LogLevel": {
